--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
   },
   "dependencies": {
     "@floating-ui/dom": "1.4.4",
-    "iconify-icon": "1.0.8",
-    "nanoid": "4.0.2"
+    "iconify-icon": "2.1.0",
+    "nanoid": "4.0.2",
+    "simple-icons": "13.1.0"
   },
   "devDependencies": {
     "@astrojs/image": "0.17.2",
@@ -36,21 +37,21 @@
     "@percy/cli": "1.26.2",
     "@types/marked": "5.0.0",
     "astro": "2.8.0",
-    "astro-compress": "2.0.14",
+    "astro-compress": "2.2.28",
     "concurrently": "8.2.0",
     "date-fns": "2.30.0",
     "favicons": "7.1.3",
-    "iconify-icon-names": "1.1.0",
+    "iconify-icon-list-names": "1.0.1",
     "immer": "10.0.2",
     "locales-ts": "1.0.0",
     "marked": "5.1.1",
     "move-file-cli": "3.0.0",
     "photoswipe": "5.3.8",
-    "postcss": "8.4.25",
+    "postcss": "8.4.39",
     "prettier": "2.8.8",
     "prettier-plugin-astro": "0.10.0",
     "prettier-plugin-tailwindcss": "0.3.0",
-    "puppeteer": "20.8.0",
+    "puppeteer": "22.13.1",
     "puppeteer-report": "3.1.0",
     "rollup-plugin-visualizer": "5.9.2",
     "tailwindcss": "3.3.2",
